--- a/01.搜索/01.01_深度优先搜索.md
+++ b/01.搜索/01.01_深度优先搜索.md
@@ -256,3 +256,8 @@ def solve_maze(maze, start, end):
 2. 尝试解决经典问题（迷宫、数独等）
 3. 理解回溯的概念
 4. 掌握递归和栈两种实现方式
+
+## 经典例题
+
+1. [放苹果](https://www.nowcoder.com/practice/bfd8234bb5e84be0b493656e390bdebf)
+2. [火车进站](https://www.nowcoder.com/practice/97ba57c35e9f4749826dc3befaeae109)
