--- a/04.动态规划/04.03_多重背包.md
+++ b/04.动态规划/04.03_多重背包.md
@@ -124,3 +124,6 @@ def multipleKnapsack(w: List[int], v: List[int], s: List[int], W: int) -> int:
 4. 内存使用限制
 5. 特殊情况处理
 
+## 经典例题
+
+1. [称砝码](https://www.nowcoder.com/practice/f9a4c19050fc477e9e27eb75f3bfd49c)
