--- a/08.数论/08.03_组合数学.md
+++ b/08.数论/08.03_组合数学.md
@@ -366,3 +366,6 @@ class Solution:
         return result
 ```
 
+## 经典例题
+
+1. [走方格的方案数](https://www.nowcoder.com/practice/e2a22f0305eb4f2f9846e7d644dba09b)
