--- a/09.图论/09.02_最短路径.md
+++ b/09.图论/09.02_最短路径.md
@@ -382,3 +382,7 @@ class Solution:
         
         return False
 ```
+
+## 经典例题
+
+1. [迷宫问题](https://www.nowcoder.com/practice/cf24906056f4488c9ddb132f317e03bc)
