--- a/10.位运算/10.01_按位与.md
+++ b/10.位运算/10.01_按位与.md
@@ -220,3 +220,6 @@ class Solution:
         return x & mask
 ```
 
+## 经典例题
+
+1. [判断两个IP是否属于同一子网](https://www.nowcoder.com/practice/34a597ee15eb4fa2b956f4c595f03218)
