--- a/05.字符串/05.04_回文串.md
+++ b/05.字符串/05.04_回文串.md
@@ -178,3 +178,7 @@ class Solution:
 4. 空串的处理
 5. 字符串长度的限制
 
+## 经典例题
+
+1. [密码截取](https://www.nowcoder.com/practice/3cd4621963e8454594f00199f4536bb1)
+
