--- a/07.二分与三分/07.01_二分查找.md
+++ b/07.二分与三分/07.01_二分查找.md
@@ -224,3 +224,6 @@ class Solution:
         return [-1, -1]
 ```
 
+## 经典例题
+
+1. [喜欢切数组的红](https://www.nowcoder.com/practice/74cb703f25dc4956acb3b08028a1f4b4)
