--- a/06.双指针/06.03_滑动窗口.md
+++ b/06.双指针/06.03_滑动窗口.md
@@ -191,3 +191,7 @@ class Solution:
 4. 窗口移动的条件
 5. 最优解的更新时机
 
+## 经典例题
+
+1. [小红的01子序列构造](https://www.nowcoder.com/practice/ee0b6c6baa2642c182df8b4390126f9a)
+2. [而后单调](https://www.nowcoder.com/practice/e108b72e995c4c33a1b9d68328a9c6bb)
