--- a/08.数论/08.01_基础数论.md
+++ b/08.数论/08.01_基础数论.md
@@ -260,3 +260,7 @@ class Solution:
             factors.append((n, 1))
         return factors
 ```
+
+## 经典例题
+
+1. [小红走网格](https://www.nowcoder.com/practice/43498993d39246c58e35ca715faea7ab)
