--- a/10.位运算/10.02_按位或.md
+++ b/10.位运算/10.02_按位或.md
@@ -245,3 +245,6 @@ class Solution:
         return high_priority | (low_priority & ~high_priority)
 ```
 
+## 经典例题
+
+1. [1 or 0](https://www.nowcoder.com/practice/b08001c812604203acf0bc43e54d3bdf)
