--- a/00.语法/00.17_队列.md
+++ b/00.语法/00.17_队列.md
@@ -253,3 +253,7 @@ def level_order(root: TreeNode) -> List[List[int]]:
     
     return result
 ```
+
+## 经典例题
+
+1.[【模板】队列](https://www.nowcoder.com/practice/afe812c80ad946f4b292a26dd13ba549)
