--- a/01.搜索/01.01_深度优先搜索.md
+++ b/01.搜索/01.01_深度优先搜索.md
@@ -261,3 +261,4 @@ def solve_maze(maze, start, end):
 
 1. [放苹果](https://www.nowcoder.com/practice/bfd8234bb5e84be0b493656e390bdebf)
 2. [火车进站](https://www.nowcoder.com/practice/97ba57c35e9f4749826dc3befaeae109)
+3. [kotori和素因子](https://www.nowcoder.com/practice/7b1c858a3e7a41ed8364178979eaae67)
