--- a/01.搜索/01.02_广度优先搜索.md
+++ b/01.搜索/01.02_广度优先搜索.md
@@ -216,3 +216,7 @@ def find_shortest_path(graph, start, end):
 2. 解决迷宫最短路径问题
 3. 实现无权图的最短路径查找
 4. 尝试在实际问题中应用BFS
+
+## 经典例题
+
+1. [走迷宫](https://www.nowcoder.com/practice/e88b41dc6e764b2893bc4221777ffe64)
