--- a/03.贪心/03.01_排序.md
+++ b/03.贪心/03.01_排序.md
@@ -154,3 +154,7 @@ points.sort(key=lambda p: (p.x, p.y))  # 先按x后按y
 4. 自定义比较函数要满足传递性
 5. 优先使用语言内置的排序函数，而不是自己实现
 
+## 经典例题
+
+1. [排序](https://www.nowcoder.com/practice/2baf799ea0594abd974d37139de27896)
+2. [活动安排](https://www.nowcoder.com/practice/16d971e9e42e4f3b9b1e2b8794796a43)
