--- a/02.前缀和与差分/02.01_一维静态前缀和.md
+++ b/02.前缀和与差分/02.01_一维静态前缀和.md
@@ -170,3 +170,6 @@ def subarray_sum(nums, k):
 3. 尝试结合其他技巧（如哈希表）
 4. 练习二维前缀和的应用
 
+## 经典例题
+
+1. [【模板】前缀和](https://www.nowcoder.com/practice/acead2f4c28c401889915da98ecdc6bf)
