--- a/02.前缀和与差分/02.04_二维静态前缀和.md
+++ b/02.前缀和与差分/02.04_二维静态前缀和.md
@@ -236,3 +236,7 @@ def maximalSquare(self, matrix: List[List[str]]) -> int:
 2. 解决子矩阵相关问题
 3. 尝试结合其他技巧
 4. 练习三维前缀和的扩展
+
+## 经典例题
+
+1.[【模板】二维前缀和](https://www.nowcoder.com/practice/99eb8040d116414ea3296467ce81cbbc)
