--- a/02.前缀和与差分/02.06_一维静态差分.md
+++ b/02.前缀和与差分/02.06_一维静态差分.md
@@ -204,3 +204,7 @@ def corpFlightBookings(self, bookings: List[List[int]], n: int) -> List[int]:
 2. 解决区间修改问题
 3. 结合实际应用场景
 4. 尝试二维差分的扩展
+
+## 经典例题
+
+1. [【模板】差分](https://www.nowcoder.com/practice/4bbc401a5df140309edd6f14debdba42)
