--- a/02.前缀和与差分/02.08_二维静态差分.md
+++ b/02.前缀和与差分/02.08_二维静态差分.md
@@ -230,3 +230,7 @@ def getModifiedMatrix(self, matrix: List[List[int]], operations: List[List[int]]
 2. 解决矩阵修改问题
 3. 结合实际应用场景
 4. 尝试动态二维差分
+
+## 经典例题
+
+1. [【模板】二维差分](https://www.nowcoder.com/practice/50e1a93989df42efb0b1dec386fb4ccc)
