--- a/04.动态规划/04.01_01背包.md
+++ b/04.动态规划/04.01_01背包.md
@@ -130,3 +130,8 @@ def knapsack(w: List[int], v: List[int], W: int) -> int:
 4. 状态转移的正确性
 5. 初始化的合理性
 
+## 经典例题
+
+1. [装箱问题](https://www.nowcoder.com/practice/55100a6608ad4656849dbd1f16d044cb)
+2. [01背包](https://www.nowcoder.com/practice/fd55637d3f24484e96dad9e992d3f62e)
+3. [小红取数](https://www.nowcoder.com/practice/6a7b2b6c9e3a4f56b1db9f8ca08d889b)
