--- a/04.动态规划/04.02_完全背包.md
+++ b/04.动态规划/04.02_完全背包.md
@@ -127,3 +127,6 @@ def completeKnapsack(w: List[int], v: List[int], W: int) -> int:
 4. 特殊情况的考虑
 5. 数据范围的限制
 
+## 经典例题
+
+1. [完全背包](https://www.nowcoder.com/practice/237ae40ea1e84d8980c1d5666d1c53bc)
