--- a/04.动态规划/04.05_单序列问题.md
+++ b/04.动态规划/04.05_单序列问题.md
@@ -152,6 +152,10 @@ def maxSubArray(nums: List[int]) -> int:
 
 ## 经典例题
 
-1. [最长上升子序列(LIS)](https://www.nowcoder.com/practice/5164f38b67f846fb8699e9352695cd2f)
+1. [最长上升子序列](https://www.nowcoder.com/practice/5f65ccbb025240bd8458eb6479c2612e)
 2. [打家劫舍](https://www.nowcoder.com/practice/c5fbf7325fbd4c0ea3d0c3ea6bc6cc79)
-
+3. [跳台阶](https://www.nowcoder.com/practice/8c82a5b80378478f9484d87d1c5f12a4)
+4. [三角形最小路径和](https://www.nowcoder.com/practice/c9d44b73dc7c4dbfa4272224b1f9b42c)
+5. [连续子数组最大和](https://www.nowcoder.com/practice/1718131e719746e9a56fb29c40cc8f95)
+6. [abb](https://www.nowcoder.com/practice/0a8bbf8b9b5b4280957849ef4f240f07)
+7. [字母收集](https://www.nowcoder.com/practice/9740ce2df0a04399a5ade1927d34c1e1)
