--- a/01.搜索/01.03_记忆化搜索.md
+++ b/01.搜索/01.03_记忆化搜索.md
@@ -202,3 +202,7 @@ def longest_common_subsequence(s1, s2):
 2. 尝试经典动态规划问题的记忆化解法
 3. 比较记忆化搜索和动态规划的异同
 4. 练习不同状态表示方式的设计
+
+## 经典例题
+
+1. [滑雪](https://www.nowcoder.com/practice/36d613e0d7c84a9ba3af3ab0047a35e0)
