--- a/04.动态规划/04.03_多重背包.md
+++ b/04.动态规划/04.03_多重背包.md
@@ -126,4 +126,5 @@ def multipleKnapsack(w: List[int], v: List[int], s: List[int], W: int) -> int:
 
 ## 经典例题
 
-1. [称砝码](https://www.nowcoder.com/practice/f9a4c19050fc477e9e27eb75f3bfd49c)
+1. [【模板】多重背包](https://www.nowcoder.com/practice/8fa10063d33a43dd9652c1511a34d461)
+2. [称砝码](https://www.nowcoder.com/practice/f9a4c19050fc477e9e27eb75f3bfd49c)
