--- a/04.动态规划/04.05_单序列问题.md
+++ b/04.动态规划/04.05_单序列问题.md
@@ -153,9 +153,33 @@ def maxSubArray(nums: List[int]) -> int:
 ## 经典例题
 
 1. [最长上升子序列](https://www.nowcoder.com/practice/5f65ccbb025240bd8458eb6479c2612e)
-2. [打家劫舍](https://www.nowcoder.com/practice/c5fbf7325fbd4c0ea3d0c3ea6bc6cc79)
-3. [跳台阶](https://www.nowcoder.com/practice/8c82a5b80378478f9484d87d1c5f12a4)
-4. [三角形最小路径和](https://www.nowcoder.com/practice/c9d44b73dc7c4dbfa4272224b1f9b42c)
-5. [连续子数组最大和](https://www.nowcoder.com/practice/1718131e719746e9a56fb29c40cc8f95)
-6. [abb](https://www.nowcoder.com/practice/0a8bbf8b9b5b4280957849ef4f240f07)
-7. [字母收集](https://www.nowcoder.com/practice/9740ce2df0a04399a5ade1927d34c1e1)
+2. [打家劫舍(一)](https://www.nowcoder.com/practice/c5fbf7325fbd4c0ea3d0c3ea6bc6cc79)
+3. [打家劫舍(二)](https://www.nowcoder.com/practice/6a8b2ceb3f8f4e5891939d7d7cbbd2c4)
+4. [跳台阶](https://www.nowcoder.com/practice/8c82a5b80378478f9484d87d1c5f12a4)
+5. [三角形最小路径和](https://www.nowcoder.com/practice/c9d44b73dc7c4dbfa4272224b1f9b42c)
+6. [连续子数组最大和](https://www.nowcoder.com/practice/1718131e719746e9a56fb29c40cc8f95)
+7. [abb](https://www.nowcoder.com/practice/0a8bbf8b9b5b4280957849ef4f240f07)
+8. [字母收集](https://www.nowcoder.com/practice/9740ce2df0a04399a5ade1927d34c1e1)
+9. [斐波那契数列](https://www.nowcoder.com/practice/ee5d403c1172487f8c7915b3c3d924c6)
+10. [跳台阶扩展问题](https://www.nowcoder.com/practice/953b74ca5c4d44bb91f39ac4ddea0fee)
+11. [最小花费爬楼梯](https://www.nowcoder.com/practice/9b969a3ec20149e3b870b256ad40844e)
+12. [矩阵的最小路径和](https://www.nowcoder.com/practice/38ae72379d42471db1c537914b06d48e)
+13. [拦截导弹](https://www.nowcoder.com/practice/218f3db1f66d465bbf9578625aa90785)
+14. [合唱队形](https://www.nowcoder.com/practice/0045cd3e39634a66ada63c2adeb49234)
+15. [最长回文子序列](https://www.nowcoder.com/practice/82297b13eebe4a0981dbfa53dfb181fa)
+16. [不相邻取数](https://www.nowcoder.com/practice/a2be806a0e5747a088670f5dc62cfa1e)
+17. [跳跃游戏(一)](https://www.nowcoder.com/practice/07484f4377344d3590045a095910992b)
+18. [跳跃游戏(二)](https://www.nowcoder.com/practice/58e31b785f4b4ced9695dd4fcd60c1ce)
+19. [跳跃游戏(三)](https://www.nowcoder.com/practice/d92a70f4f42248d688b93c9e50d2e757)
+20. [买卖股票的最好时机(二)](https://www.nowcoder.com/practice/fbc5dad3e215457fb82a3ae688eb7281)
+21. [最大子矩阵](https://www.nowcoder.com/practice/a5a0b05f0505406ca837a3a76a5419b3)
+22. [龙与地下城游戏问题](https://www.nowcoder.com/practice/c0ca4c9e65144af69ada03febaa0e33a)
+23. [删除相邻数字的最大分数](https://www.nowcoder.com/practice/3bcf72c738b6494bbe1ebe0ffde56152)
+24. [连续子数组的最大乘积](https://www.nowcoder.com/practice/fd8c819c07c9493887bfac8549c119f4)
+25. [环形数组的连续子数组最大和](https://www.nowcoder.com/practice/53a9f1ba687440cc9c641c2b042a59d7)
+26. [信封嵌套](https://www.nowcoder.com/practice/25fe1fc89c4c4e82bbc63df04bc6ca30)
+27. [乘积为正数的最长连续子数组](https://www.nowcoder.com/practice/0112b9b5a09048d89309f55ea666db91)
+28. [有多少个不同的二叉搜索树](https://www.nowcoder.com/practice/16d23f940a084023b3be6019262589dc)
+29. [正则表达式匹配](https://www.nowcoder.com/practice/4332e089f39442568af33afac99345be)
+30. [过河卒](https://www.nowcoder.com/practice/cc1a9bc523a24716a117b438a1dc5706)
+31. [过河](https://www.nowcoder.com/practice/35ddfeb4e34f410bb9035682463a382f)
