--- a/04.动态规划/04.07_区间dp.md
+++ b/04.动态规划/04.07_区间dp.md
@@ -214,4 +214,13 @@ def palindrome(s: str) -> List[List[bool]]:
 4. 区间大小限制
 5. 空间优化可能
 
+## 经典例题
 
+1. [【模板】区间dp](https://www.nowcoder.com/practice/f482a7ca9257422dbd7bd495d9d04f7a)
+2. [合并回文子串](https://www.nowcoder.com/practice/2f43728b46744546b4ad7f4f0398054f)
+3. [涂色PAINT](https://www.nowcoder.com/practice/512619bee5874e85bd2812a0c9066125)
+4. [括号区间匹配](https://www.nowcoder.com/practice/e391767d80d942d29e6095a935a5b96b)
+5. [能量项链](https://www.nowcoder.com/practice/565e5812eeab4d8d8449adebcb6583ef)
+6. [取数游戏](https://www.nowcoder.com/practice/b467563ebc14407d842f0bb4680f52d8)
+7. [矩阵取数游戏](https://www.nowcoder.com/practice/996133873fa7453d9160064627e93fd4)
+8. [加分二叉树](https://www.nowcoder.com/practice/0196d17a175749178ca95aa40794dbb7)
