--- a/04.动态规划/04.08_状压dp.md
+++ b/04.动态规划/04.08_状压dp.md
@@ -209,3 +209,8 @@ def partition(nums: List[int]) -> int:
 3. 状态转移正确性
 4. 内存限制
 5. 计算复杂度
+
+## 经典例题
+
+1. [郊区春游](https://www.nowcoder.com/practice/75b87bec7e5c4acaaad39d9ae093dc3d)
+2. [数位染色](https://www.nowcoder.com/practice/adf828f399de4932955734a4eac12757)
