--- a/04.动态规划/04.09_树形dp.md
+++ b/04.动态规划/04.09_树形dp.md
@@ -255,3 +255,10 @@ def treeDiameter(n: int, edges: List[List[int]]) -> int:
 4. 边界条件的处理
 5. 路径信息的更新
 
+## 经典例题
+
+1. [旅游](https://www.nowcoder.com/practice/600dd094e1af43c4bcb32b58cd9c9394)
+2. [红和蓝](https://www.nowcoder.com/practice/34bf2aaeb61f47be980b9ec0ab238c36)
+3. [小红的树](https://www.nowcoder.com/practice/66ab364d3fba487eb39bd3460fd484c0)
+4. [二叉树中的最大路径和](https://www.nowcoder.com/practice/8fda1d22554f4824b0ef9c26f35e54dd)
+5. [打家劫舍(三)](https://www.nowcoder.com/practice/58dad1054a0b41ab9b076e5bcc3160dc)
