--- a/07.二分与三分/07.02_二分答案.md
+++ b/07.二分与三分/07.02_二分答案.md
@@ -337,3 +337,7 @@ class Solution:
         return left
 ```
 
+## 经典例题
+
+1. [游游的最长稳定子数组](https://www.nowcoder.com/practice/ea7098b7960348f6915e252f0c4debcc)
+2. [圆覆盖](https://www.nowcoder.com/practice/4f96afe5dfe74dad88dbe419d33f9536)
