--- a/07.二分与三分/07.03_三分答案.md
+++ b/07.二分与三分/07.03_三分答案.md
@@ -336,3 +336,9 @@ class Solution:
         
         return min(nums[i] for i in range(left, right + 1))
 ```
+
+## 经典例题
+
+1. [【模板】整数域三分](https://www.nowcoder.com/practice/12e52f8182354b94b7ff4800dc1c0cfc)
+2. [游游开车出游](https://www.nowcoder.com/practice/667369e08b2f498c89a935df0af921b3)
+3. [游游的数值距离](https://www.nowcoder.com/practice/a3688c3615d144e4ba79357034850e3c)
