--- a/08.数论/08.01_基础数论.md
+++ b/08.数论/08.01_基础数论.md
@@ -264,3 +264,6 @@ class Solution:
 ## 经典例题
 
 1. [小红走网格](https://www.nowcoder.com/practice/43498993d39246c58e35ca715faea7ab)
+2. [小红和小紫的取素因子游戏](https://www.nowcoder.com/practice/6146f391a69547c4804fe8d0330f1745)
+3. [游游的最小公倍数](https://www.nowcoder.com/practice/385c7aa397e54bb58f36286ab0d65156)
+4. [小苯的数字权值](https://www.nowcoder.com/practice/aeacca655eec45999a6dc4d998dfd4a5)
