--- a/08.数论/08.02_同余运算.md
+++ b/08.数论/08.02_同余运算.md
@@ -251,3 +251,6 @@ class Solution:
         return d, y, x - (a // b) * y
 ```
 
+## 经典例题
+
+1. [【模板】快速幂Ⅰ ‖ 整数](https://www.nowcoder.com/practice/3d624107a6904da1bd0e8c9c85e17167)
