--- a/09.图论/09.02_最短路径.md
+++ b/09.图论/09.02_最短路径.md
@@ -385,4 +385,8 @@ class Solution:
 
 ## 经典例题
 
-1. [迷宫问题](https://www.nowcoder.com/practice/cf24906056f4488c9ddb132f317e03bc)
+1. [【模板】单源最短路Ⅰ ‖ 无权图](https://www.nowcoder.com/practice/359e14832ce1476fadc70dd4bc36b991)
+2. [【模板】单源最短路Ⅲ ‖ 非负权图](https://www.nowcoder.com/practice/d7fafd4f3340439e90597532850257b5)
+3. [迷宫问题](https://www.nowcoder.com/practice/cf24906056f4488c9ddb132f317e03bc)
+4. [小红送外卖](https://www.nowcoder.com/practice/2850d7c941f6494e82ba74bc899eb512)
+5. [游游出游](https://www.nowcoder.com/practice/e787b99f04c1498aa32b9430a4616d8a)
