--- a/02.前缀和与差分/02.01_一维静态前缀和.md
+++ b/02.前缀和与差分/02.01_一维静态前缀和.md
@@ -173,3 +173,4 @@ def subarray_sum(nums, k):
 ## 经典例题
 
 1. [【模板】前缀和](https://www.nowcoder.com/practice/acead2f4c28c401889915da98ecdc6bf)
+2. [买卖股票的最好时机(一)](https://www.nowcoder.com/practice/351b87e53d0d44928f4de9b6217d36bb)
