--- a/02.前缀和与差分/02.02_一维动态前缀和（单修区查）.md
+++ b/02.前缀和与差分/02.02_一维动态前缀和（单修区查）.md
@@ -258,3 +258,7 @@ def countRangeSum(self, nums: List[int], lower: int, upper: int) -> int:
 2. 解决区间和相关问题
 3. 尝试二维树状数组
 4. 练习树状数组的应用场景
+
+## 经典例题
+
+1. [【模板】线段树1](https://www.nowcoder.com/practice/e767b7b441ce4345aad1fac0a3633afb)
