--- a/00.语法/00.16_栈.md
+++ b/00.语法/00.16_栈.md
@@ -217,8 +217,9 @@ def is_valid(s: str) -> bool:
 
 ## 经典例题
 
-1. [【模板】栈](https://www.nowcoder.com/practice/104ce248c2f04cfb986b92d0548cccbf)
-2. [栈的压入、弹出序列](https://www.nowcoder.com/practice/d77d11405cc7470d82554cb392585106)
-3. [有效括号序列](https://www.nowcoder.com/practice/37548e94a270412c8b9fb85643c8ccc2)
-4. [逆波兰表达式求值](https://www.nowcoder.com/practice/885c1db3e39040cbae5cdf59fb0e9382)
-5. [点击消除](https://www.nowcoder.com/practice/8d3643ec29654cf8908b5cf3a0479fd5)
+1. [【模板】栈](https://www.nowcoder.com/practice/104ce248c2f04cfb986b92d0548cccbf?channelPut=niudong)
+2. [栈的压入、弹出序列](https://www.nowcoder.com/practice/d77d11405cc7470d82554cb392585106?channelPut=niudong)
+3. [有效括号序列](https://www.nowcoder.com/practice/37548e94a270412c8b9fb85643c8ccc2?channelPut=niudong)
+4. [逆波兰表达式求值](https://www.nowcoder.com/practice/885c1db3e39040cbae5cdf59fb0e9382?channelPut=niudong)
+5. [点击消除](https://www.nowcoder.com/practice/8d3643ec29654cf8908b5cf3a0479fd5?channelPut=niudong)
+6. [火车进站](https://www.nowcoder.com/practice/97ba57c35e9f4749826dc3befaeae109?channelPut=niudong)
