--- a/00.语法/00.18_优先队列.md
+++ b/00.语法/00.18_优先队列.md
@@ -307,5 +307,5 @@ def merge_k_lists(lists: List[ListNode]) -> ListNode:
 
 ## 经典例题
 
-1. [【模板】堆](https://www.nowcoder.com/practice/13f61c8c92404f5ea5d6fa4c692869fb)
-2. [哈夫曼编码](https://www.nowcoder.com/practice/4c0419eb07c840ca8402e4f2a52cfd49)
+1. [【模板】堆](https://www.nowcoder.com/practice/13f61c8c92404f5ea5d6fa4c692869fb?channelPut=niudong)
+2. [哈夫曼编码](https://www.nowcoder.com/practice/4c0419eb07c840ca8402e4f2a52cfd49?channelPut=niudong)
