--- a/01.搜索/01.02_广度优先搜索.md
+++ b/01.搜索/01.02_广度优先搜索.md
@@ -219,4 +219,5 @@ def find_shortest_path(graph, start, end):
 
 ## 经典例题
 
-1. [走迷宫](https://www.nowcoder.com/practice/e88b41dc6e764b2893bc4221777ffe64)
+1. [走迷宫](https://www.nowcoder.com/practice/e88b41dc6e764b2893bc4221777ffe64?channelPut=niudong)
+2. [智能机器人](https://www.nowcoder.com/practice/c2f86680fc9241f2a0659b95d8d3d6e2?channelPut=niudong)
