--- a/02.前缀和与差分/02.02_一维动态前缀和（单修区查）.md
+++ b/02.前缀和与差分/02.02_一维动态前缀和（单修区查）.md
@@ -261,4 +261,4 @@ def countRangeSum(self, nums: List[int], lower: int, upper: int) -> int:
 
 ## 经典例题
 
-1. [【模板】线段树1](https://www.nowcoder.com/practice/e767b7b441ce4345aad1fac0a3633afb)
+1. [【模板】线段树1](https://www.nowcoder.com/practice/e767b7b441ce4345aad1fac0a3633afb?channelPut=niudong)
