--- a/02.前缀和与差分/02.04_二维静态前缀和.md
+++ b/02.前缀和与差分/02.04_二维静态前缀和.md
@@ -239,4 +239,5 @@ def maximalSquare(self, matrix: List[List[str]]) -> int:
 
 ## 经典例题
 
-1.[【模板】二维前缀和](https://www.nowcoder.com/practice/99eb8040d116414ea3296467ce81cbbc)
+1. [【模板】二维前缀和](https://www.nowcoder.com/practice/99eb8040d116414ea3296467ce81cbbc?channelPut=niudong)
+2. [小红的蛋糕切割](https://www.nowcoder.com/practice/ea72b571afdb499fa344e56f06b5c71c?channelPut=niudong)
