--- a/02.前缀和与差分/02.08_二维静态差分.md
+++ b/02.前缀和与差分/02.08_二维静态差分.md
@@ -233,4 +233,4 @@ def getModifiedMatrix(self, matrix: List[List[int]], operations: List[List[int]]
 
 ## 经典例题
 
-1. [【模板】二维差分](https://www.nowcoder.com/practice/50e1a93989df42efb0b1dec386fb4ccc)
+1. [【模板】二维差分](https://www.nowcoder.com/practice/50e1a93989df42efb0b1dec386fb4ccc?channelPut=niudong)
