--- a/03.贪心/03.01_排序.md
+++ b/03.贪心/03.01_排序.md
@@ -156,5 +156,6 @@ points.sort(key=lambda p: (p.x, p.y))  # 先按x后按y
 
 ## 经典例题
 
-1. [排序](https://www.nowcoder.com/practice/2baf799ea0594abd974d37139de27896)
-2. [活动安排](https://www.nowcoder.com/practice/16d971e9e42e4f3b9b1e2b8794796a43)
+1. [排序](https://www.nowcoder.com/practice/2baf799ea0594abd974d37139de27896?channelPut=niudong)
+2. [活动安排](https://www.nowcoder.com/practice/16d971e9e42e4f3b9b1e2b8794796a43?channelPut=niudong)
+3. [小红的整数配对](https://www.nowcoder.com/practice/7fc314de9064479baddd77848c4c7d95?channelPut=niudong)
