--- a/04.动态规划/04.02_完全背包.md
+++ b/04.动态规划/04.02_完全背包.md
@@ -129,6 +129,6 @@ def completeKnapsack(w: List[int], v: List[int], W: int) -> int:
 
 ## 经典例题
 
-1. [【模板】完全背包](https://www.nowcoder.com/practice/664ccf702ddb43a986e95f41c1196718)
-2. [最少的完全平方数](https://www.nowcoder.com/practice/4b2f5d4c00f44a92845bdad633965c04)
-3. [兑换零钱](https://www.nowcoder.com/practice/67b93e5d5b85442eb950b89c8b77bc72)
+1. [【模板】完全背包](https://www.nowcoder.com/practice/664ccf702ddb43a986e95f41c1196718?channelPut=niudong)
+2. [最少的完全平方数](https://www.nowcoder.com/practice/4b2f5d4c00f44a92845bdad633965c04?channelPut=niudong)
+3. [兑换零钱](https://www.nowcoder.com/practice/67b93e5d5b85442eb950b89c8b77bc72?channelPut=niudong)
