--- a/04.动态规划/04.08_状压dp.md
+++ b/04.动态规划/04.08_状压dp.md
@@ -212,5 +212,5 @@ def partition(nums: List[int]) -> int:
 
 ## 经典例题
 
-1. [郊区春游](https://www.nowcoder.com/practice/75b87bec7e5c4acaaad39d9ae093dc3d)
-2. [数位染色](https://www.nowcoder.com/practice/adf828f399de4932955734a4eac12757)
+1. [郊区春游](https://www.nowcoder.com/practice/75b87bec7e5c4acaaad39d9ae093dc3d?channelPut=niudong)
+2. [数位染色](https://www.nowcoder.com/practice/adf828f399de4932955734a4eac12757?channelPut=niudong)
