--- a/04.动态规划/04.10_数位dp.md
+++ b/04.动态规划/04.10_数位dp.md
@@ -243,7 +243,7 @@ def countDigit(n: int, d: int) -> int:
 
 ## 经典例题
 
-1. [数字1的个数](https://www.nowcoder.com/practice/bd7f978302044eee894445e244c7eee6)
-2. [数字游戏](https://www.nowcoder.com/practice/876e3c5fcfa5469f8376370d5de87c06)
-3. [数字计数](https://www.nowcoder.com/practice/bb1a9efa244a4c9296390686ef17b024)
-4. [串](https://www.nowcoder.com/practice/01c35f01fb7343fe9fc16139562f78ed)
+1. [数字1的个数](https://www.nowcoder.com/practice/bd7f978302044eee894445e244c7eee6?channelPut=niudong)
+2. [数字游戏](https://www.nowcoder.com/practice/876e3c5fcfa5469f8376370d5de87c06?channelPut=niudong)
+3. [数字计数](https://www.nowcoder.com/practice/bb1a9efa244a4c9296390686ef17b024?channelPut=niudong)
+4. [串](https://www.nowcoder.com/practice/01c35f01fb7343fe9fc16139562f78ed?channelPut=niudong)
