--- a/07.二分与三分/07.02_二分答案.md
+++ b/07.二分与三分/07.02_二分答案.md
@@ -339,5 +339,8 @@ class Solution:
 
 ## 经典例题
 
-1. [游游的最长稳定子数组](https://www.nowcoder.com/practice/ea7098b7960348f6915e252f0c4debcc)
-2. [圆覆盖](https://www.nowcoder.com/practice/4f96afe5dfe74dad88dbe419d33f9536)
+1. [游游的最长稳定子数组](https://www.nowcoder.com/practice/ea7098b7960348f6915e252f0c4debcc?channelPut=niudong)
+2. [圆覆盖](https://www.nowcoder.com/practice/4f96afe5dfe74dad88dbe419d33f9536?channelPut=niudong)
+3. [小苯的区间删除](https://www.nowcoder.com/practice/91495e71914a4bf7abacf80ac4309eeb?channelPut=niudong)
+4. [小苯的魔法染色](https://www.nowcoder.com/practice/2e27509b990d4d02a70c0f208f078cdf?channelPut=niudong)
+5. [小红的矩阵](https://www.nowcoder.com/practice/c77b7301464f4cfcacc9492a3c999f65?channelPut=niudong)
