--- a/07.二分与三分/07.03_三分答案.md
+++ b/07.二分与三分/07.03_三分答案.md
@@ -339,6 +339,6 @@ class Solution:
 
 ## 经典例题
 
-1. [【模板】整数域三分](https://www.nowcoder.com/practice/12e52f8182354b94b7ff4800dc1c0cfc)
-2. [游游开车出游](https://www.nowcoder.com/practice/667369e08b2f498c89a935df0af921b3)
-3. [游游的数值距离](https://www.nowcoder.com/practice/a3688c3615d144e4ba79357034850e3c)
+1. [【模板】整数域三分](https://www.nowcoder.com/practice/12e52f8182354b94b7ff4800dc1c0cfc?channelPut=niudong)
+2. [游游开车出游](https://www.nowcoder.com/practice/667369e08b2f498c89a935df0af921b3?channelPut=niudong)
+3. [游游的数值距离](https://www.nowcoder.com/practice/a3688c3615d144e4ba79357034850e3c?channelPut=niudong)
