--- a/08.数论/08.02_同余运算.md
+++ b/08.数论/08.02_同余运算.md
@@ -253,4 +253,5 @@ class Solution:
 
 ## 经典例题
 
-1. [【模板】快速幂Ⅰ ‖ 整数](https://www.nowcoder.com/practice/3d624107a6904da1bd0e8c9c85e17167)
+1. [【模板】快速幂Ⅰ ‖ 整数](https://www.nowcoder.com/practice/3d624107a6904da1bd0e8c9c85e17167?channelPut=niudong)
+2. [Y型树](https://www.nowcoder.com/practice/444ca6d8ab1c416e9729392d377b4fa8?channelPut=niudong)
