--- a/09.图论/09.01_基础图论.md
+++ b/09.图论/09.01_基础图论.md
@@ -398,4 +398,4 @@ class Solution:
 
 ## 经典例题
 
-1. [【模板】拓扑排序](https://www.nowcoder.com/practice/88f7e156ca7d43a1a535f619cd3f495c)
+1. [【模板】拓扑排序](https://www.nowcoder.com/practice/88f7e156ca7d43a1a535f619cd3f495c?channelPut=niudong)
