--- a/09.图论/09.03_最小生成树.md
+++ b/09.图论/09.03_最小生成树.md
@@ -465,5 +465,5 @@ class Solution:
 
 ## 经典例题
 
-1. [【模板】最小生成树](https://www.nowcoder.com/practice/6434142fe980434899c396a6124b0778)
-2. [小欧皇](https://www.nowcoder.com/practice/6afe13c512d44b30b03933471d259ba4)
+1. [【模板】最小生成树](https://www.nowcoder.com/practice/6434142fe980434899c396a6124b0778?channelPut=niudong)
+2. [小欧皇](https://www.nowcoder.com/practice/6afe13c512d44b30b03933471d259ba4?channelPut=niudong)
