--- a/10.位运算/10.01_按位与.md
+++ b/10.位运算/10.01_按位与.md
@@ -222,5 +222,5 @@ class Solution:
 
 ## 经典例题
 
-1. [判断两个IP是否属于同一子网](https://www.nowcoder.com/practice/34a597ee15eb4fa2b956f4c595f03218)
-2. [隐匿社交网络](https://www.nowcoder.com/practice/2870f9db6aeb4eb08fbd6460397f9bf4)
+1. [判断两个IP是否属于同一子网](https://www.nowcoder.com/practice/34a597ee15eb4fa2b956f4c595f03218?channelPut=niudong)
+2. [隐匿社交网络](https://www.nowcoder.com/practice/2870f9db6aeb4eb08fbd6460397f9bf4?channelPut=niudong)
