--- a/10.位运算/10.03_按位异或.md
+++ b/10.位运算/10.03_按位异或.md
@@ -262,3 +262,6 @@ class Solution:
         return result
 ```
 
+## 经典例题
+
+1. [小红吃药](https://www.nowcoder.com/practice/ea822e4a974e4ab0bc72c203adce7d44?channelPut=niudong)
