--- a/04.动态规划/04.01_01背包.md
+++ b/04.动态规划/04.01_01背包.md
@@ -132,7 +132,7 @@ def knapsack(w: List[int], v: List[int], W: int) -> int:
 
 ## 经典例题
 
-1. [【模板】01背包](https://www.nowcoder.com/practice/9bb79a902fb74ec9adde6e4e8fd1a5d1)
-2. [装箱问题](https://www.nowcoder.com/practice/55100a6608ad4656849dbd1f16d044cb)
-3. [小红取数](https://www.nowcoder.com/practice/6a7b2b6c9e3a4f56b1db9f8ca08d889b)
-4. [分割等和子集](https://www.nowcoder.com/practice/65ade309fa4d4067a9add749721bfdc0)
+1. [【模板】01背包](https://www.nowcoder.com/practice/9bb79a902fb74ec9adde6e4e8fd1a5d1?channelPut=niudong)
+2. [装箱问题](https://www.nowcoder.com/practice/55100a6608ad4656849dbd1f16d044cb?channelPut=niudong)
+3. [小红取数](https://www.nowcoder.com/practice/6a7b2b6c9e3a4f56b1db9f8ca08d889b?channelPut=niudong)
+4. [分割等和子集](https://www.nowcoder.com/practice/65ade309fa4d4067a9add749721bfdc0?channelPut=niudong)
