--- a/04.动态规划/04.07_区间dp.md
+++ b/04.动态规划/04.07_区间dp.md
@@ -216,11 +216,11 @@ def palindrome(s: str) -> List[List[bool]]:
 
 ## 经典例题
 
-1. [【模板】区间dp](https://www.nowcoder.com/practice/f482a7ca9257422dbd7bd495d9d04f7a)
-2. [合并回文子串](https://www.nowcoder.com/practice/2f43728b46744546b4ad7f4f0398054f)
-3. [涂色PAINT](https://www.nowcoder.com/practice/512619bee5874e85bd2812a0c9066125)
-4. [括号区间匹配](https://www.nowcoder.com/practice/e391767d80d942d29e6095a935a5b96b)
-5. [能量项链](https://www.nowcoder.com/practice/565e5812eeab4d8d8449adebcb6583ef)
-6. [取数游戏](https://www.nowcoder.com/practice/b467563ebc14407d842f0bb4680f52d8)
-7. [矩阵取数游戏](https://www.nowcoder.com/practice/996133873fa7453d9160064627e93fd4)
-8. [加分二叉树](https://www.nowcoder.com/practice/0196d17a175749178ca95aa40794dbb7)
+1. [【模板】区间dp](https://www.nowcoder.com/practice/f482a7ca9257422dbd7bd495d9d04f7a?channelPut=niudong)
+2. [合并回文子串](https://www.nowcoder.com/practice/2f43728b46744546b4ad7f4f0398054f?channelPut=niudong)
+3. [涂色PAINT](https://www.nowcoder.com/practice/512619bee5874e85bd2812a0c9066125?channelPut=niudong)
+4. [括号区间匹配](https://www.nowcoder.com/practice/e391767d80d942d29e6095a935a5b96b?channelPut=niudong)
+5. [能量项链](https://www.nowcoder.com/practice/565e5812eeab4d8d8449adebcb6583ef?channelPut=niudong)
+6. [取数游戏](https://www.nowcoder.com/practice/b467563ebc14407d842f0bb4680f52d8?channelPut=niudong)
+7. [矩阵取数游戏](https://www.nowcoder.com/practice/996133873fa7453d9160064627e93fd4?channelPut=niudong)
+8. [加分二叉树](https://www.nowcoder.com/practice/0196d17a175749178ca95aa40794dbb7?channelPut=niudong)
