--- a/05.字符串/05.04_回文串.md
+++ b/05.字符串/05.04_回文串.md
@@ -180,4 +180,4 @@ class Solution:
 
 ## 经典例题
 
-1. [密码截取](https://www.nowcoder.com/practice/3cd4621963e8454594f00199f4536bb1)
+1. [密码截取](https://www.nowcoder.com/practice/3cd4621963e8454594f00199f4536bb1?channelPut=niudong)
