--- a/06.双指针/06.03_滑动窗口.md
+++ b/06.双指针/06.03_滑动窗口.md
@@ -193,7 +193,7 @@ class Solution:
 
 ## 经典例题
 
-1. [小红的01子序列构造](https://www.nowcoder.com/practice/ee0b6c6baa2642c182df8b4390126f9a)
-2. [而后单调](https://www.nowcoder.com/practice/e108b72e995c4c33a1b9d68328a9c6bb)
-3. [相差不超过k的最多数](https://www.nowcoder.com/practice/562630ca90ac40ce89443c91060574c6)
-4. [请客吃饭](https://www.nowcoder.com/practice/4250a369235e414ba9128bb23ff4fcf5)
+1. [小红的01子序列构造](https://www.nowcoder.com/practice/ee0b6c6baa2642c182df8b4390126f9a?channelPut=niudong)
+2. [而后单调](https://www.nowcoder.com/practice/e108b72e995c4c33a1b9d68328a9c6bb?channelPut=niudong)
+3. [相差不超过k的最多数](https://www.nowcoder.com/practice/562630ca90ac40ce89443c91060574c6?channelPut=niudong)
+4. [请客吃饭](https://www.nowcoder.com/practice/4250a369235e414ba9128bb23ff4fcf5?channelPut=niudong)
